--- a/resources/sitemap.html
+++ b/resources/sitemap.html
@@ -118,6 +118,10 @@
                     <span class="file-path">/ resources/image_converter.html</span>
                 </li>
                 <li>
+                    <a href="wingchunAI.html" class="neon-text-sub">Wing Chun AI</a>
+                    <span class="file-path">/ resources/wingchunAI.html</span>
+                </li>
+                <li>
                     <a href="sitemap.html" class="neon-text-sub">Site Map</a>
                     <span class="file-path">/ resources/sitemap.html</span>
                 </li>
