Added Chinese Typeshooter

--- a/resources/sitemap.html
+++ b/resources/sitemap.html
@@ -122,6 +122,10 @@
                     <span class="file-path">/ resources/wingchunAI.html</span>
                 </li>
                 <li>
+                    <a href="chinese_typeshooter.html" class="neon-text-sub">CangjieTypeShooter</a>
+                    <span class="file-path">/ resources/chinese_typeshooter.html</span>
+                </li>
+                <li>
                     <a href="sitemap.html" class="neon-text-sub">Site Map</a>
                     <span class="file-path">/ resources/sitemap.html</span>
                 </li>
