Update Chinese Datas

--- a/resources/chinese_typeshooter_source.html
+++ b/resources/chinese_typeshooter_source.html
@@ -556,7 +556,7 @@
             { char: '米', code: 'FD' },
             { char: '步', code: 'YH' },
             { char: '園', code: 'WV' },
-            { char: '青', code: 'OB' },
+            { char: '青', code: 'QB' },
             { char: '王', code: 'MG' },
             { char: '勿', code: 'PH' },
             { char: '巳', code: 'RU' },
@@ -586,7 +586,8 @@
             { char: '安', code: 'JV' },
             { char: '風', code: 'HI' },
             { char: '調', code: 'YR' },
-            { char: '雨', code: 'LC' },
+            { char: '雨', code: 'MY' },
+            { char: '順', code: 'LC' },
             { char: '今', code: 'ON' },
             { char: '天', code: 'MK' },
             { char: '我', code: 'HI' },
@@ -615,7 +616,7 @@
             { char: '運', code: 'YJ' },
             { char: '動', code: 'HS' },
             { char: '場', code: 'GH' },
-            { char: '羽', code: 'SM' },
+            { char: '羽', code: 'SV' },
             { char: '毛', code: 'HU' },
             { char: '球', code: 'ME' },
             { char: '新', code: 'YL' },
@@ -635,7 +636,7 @@
             { char: '河', code: 'ER' },
             { char: '長', code: 'SM' },
             { char: '江', code: 'EM' },
-            { char: '珠', code: 'GM' },
+            { char: '珠', code: 'MD' },
             { char: '西', code: 'MW' },
             { char: '湖', code: 'EB' },
             { char: '山', code: 'U' },
@@ -662,41 +663,41 @@
             { char: '火', code: 'F' },
             { char: '藥', code: 'TD' },
             { char: '指', code: 'QA' },
-            { char: '南', code: 'JT' },
+            { char: '南', code: 'JJ' },
             { char: '針', code: 'CJ' },
             { char: '進', code: 'YG' },
             { char: '行', code: 'HN' },
             { char: '互', code: 'MM' },
             { char: '聯', code: 'ST' },
-            { char: '網', code: 'WV' },
+            { char: '網', code: 'VV' },
             { char: '活', code: 'ER' },
             { char: '時', code: 'AI' },
             { char: '所', code: 'HL' },
             { char: '留', code: 'HW' },
             { char: '下', code: 'MY' },
-            { char: '痕', code: 'MK' },
+            { char: '痕', code: 'KV' },
             { char: '跡', code: 'RC' },
-            { char: '稱', code: 'HH' },
+            { char: '稱', code: 'HB' },
             { char: '為', code: 'IF' },
-            { char: '數', code: 'VK' },
-            { char: '碼', code: 'MR' },
+            { char: '數', code: 'LK' },
+            { char: '碼', code: 'MF' },
             { char: '足', code: 'RO' },
-            { char: '我', code: 'II' },
+            { char: '我', code: 'HI' },
             { char: '應', code: 'IP' },
-            { char: '該', code: 'RY' },
-            { char: '尊', code: 'TG' },
+            { char: '該', code: 'YO' },
+            { char: '尊', code: 'TI' },
             { char: '重', code: 'HG' },
             { char: '別', code: 'RN' },
-            { char: '人', code: 'OO' },
+            { char: '人', code: 'O' },
             { char: '創', code: 'ON' },
             { char: '作', code: 'OS' },
             { char: '果', code: 'WD' },
             { char: '共', code: 'TC' },
-            { char: '同', code: 'BM' },
+            { char: '同', code: 'BR' },
             { char: '保', code: 'OD' },
-            { char: '護', code: 'RY' },
-            { char: '知', code: 'OK' },
-            { char: '識', code: 'RY' },
+            { char: '護', code: 'YE' },
+            { char: '知', code: 'OR' },
+            { char: '識', code: 'YA' },
             { char: '產', code: 'YM' },
             { char: '權', code: 'DG' },
             { char: '工', code: 'MM' },
@@ -705,16 +706,16 @@
             { char: '可', code: 'MR' },
             { char: '以', code: 'VO' },
             { char: '模', code: 'DK' },
-            { char: '擬', code: 'RQ' },
-            { char: '類', code: 'OF' },
+            { char: '擬', code: 'QO' },
+            { char: '類', code: 'FC' },
             { char: '思', code: 'WP' },
-            { char: '考', code: 'JK' },
+            { char: '考', code: 'JS' },
             { char: '推', code: 'QG' },
             { char: '理', code: 'MG' },
             { char: '及', code: 'NE' },
-            { char: '判', code: 'RN' },
-            { char: '斷', code: 'VM' },
-            { char: '等', code: 'HG' }
+            { char: '判', code: 'FN' },
+            { char: '斷', code: 'VL' },
+            { char: '等', code: 'HI' }
         ];
 
         let score = 0, isPlaying = false, timeLeft = 60, streak = 0;
