--- a/resources/sitemap.html
+++ b/resources/sitemap.html
@@ -114,6 +114,10 @@
                     <span class="file-path">/ resources/chinese_typeshooter.html</span>
                 </li>
                 <li>
+                    <a href="bible_writing.html" class="neon-text-sub">Bible Chinese Writing</a>
+                    <span class="file-path">/ resources/bible_writing.html</span>
+                </li>
+                <li>
                     <a href="sitemap.html" class="neon-text-sub">Site Map</a>
                     <span class="file-path">/ resources/sitemap.html</span>
                 </li>
