--- a/resources/bible_writing.html
+++ b/resources/bible_writing.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Chinese Bible Handwriting Practice</title>
+    <link rel="icon" type="image/x-icon" href="images/icon.ico">
     <style>
         :root {
             --primary: #5d4037;
