--- a/resources/bible_writing.html
+++ b/resources/bible_writing.html
@@ -363,7 +363,14 @@
         <button class="menu-toggle" onclick="toggleSidebar()">☰</button>
         <button onclick="changeBook(-1)">上卷</button>
         <button onclick="changeChapter(-1)">上章</button>
-        <span id="nav-label">...</span>
+        <div id="nav-progress-wrapper"
+            style="display: flex; flex-direction: column; align-items: center; min-width: 100px;">
+            <span id="nav-label">...</span>
+            <div class="progress-container"
+                style="width: 80px; height: 4px; margin-top: 2px; background: rgba(255,255,255,0.3);">
+                <div id="nav-progress-bar" class="progress-bar" style="width: 0%; background: #4caf50;"></div>
+            </div>
+        </div>
         <button onclick="changeChapter(1)">下章</button>
         <button onclick="changeBook(1)">下卷</button>
         <button class="btn-download-mode" onclick="toggleDownloadMode()">下載</button>
@@ -617,6 +624,7 @@
             await setDB('bible_meta', chapterMeta);
 
             activeGlobalIndex = 0;
+            updateNavProgress();
             renderDisplay();
             updateTargetChar();
         }
@@ -858,7 +866,7 @@
                 activeBoxImg.src = imgData;
                 activeBoxImg.style.display = 'block'; // Show it now that it has data
             }
-
+            updateNavProgress();
             clearCanvas();
             activeGlobalIndex++;
             updateHighlight();
@@ -926,6 +934,22 @@
                 }
             };
             reader.readAsText(file);
+        }
+        async function updateNavProgress() {
+            const book = books[currentBookIndex];
+            const key = `bible_${book.id}_${currentChapter}`;
+            const chapterMeta = await getDB('bible_meta') || {};
+            const cData = await getDB(key) || {};
+
+            const writtenCount = Object.keys(cData).length;
+            const totalInChap = chapterMeta[key] || 0;
+            const chapPerc = totalInChap > 0 ? Math.round((writtenCount / totalInChap) * 100) : 0;
+
+            const navBar = document.getElementById('nav-progress-bar');
+            if (navBar) {
+                navBar.style.width = `${chapPerc}%`;
+                navBar.style.background = getProgColor(chapPerc); // Uses your existing color logic
+            }
         }
         init();
     </script>
